[metadata]
name = yellowcabs
author = Moritz Bracht
author-email = mail@morz.me
summary = Data pipeline to calculate some data from yellow cap trip data in NY
description-file = README.md
description-content-type = text/markdown
classifier =
  Environment :: Web Environment
  Framework :: Flask
  Intended Audience :: Developers
  Operating System :: POSIX :: Linux
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python
  Programming Language :: Python :: 3.7

[files]
packages = yellowcabs
data_files =
  share/ = data/*

[entry_points]
console_scripts =
  yellowcabs = yellowcabs.cli:average_trip_duration
